<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_chart_info_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/info_text"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/price"
            android:layout_marginLeft="10dp"
            android:textColor="@color/info_text"
            android:textSize="8sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_price"
            android:textColor="@color/info_text"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/tv_open_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/price"
            android:layout_marginLeft="10dp"
            android:textColor="@color/info_text"
            android:textSize="8sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_price"
            android:textColor="@color/info_text"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/tv_high_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/price"
            android:layout_marginLeft="10dp"
            android:textColor="@color/info_text"
            android:textSize="8sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_price"
            android:textColor="@color/info_text"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/tv_low_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/price"
            android:layout_marginLeft="10dp"
            android:textColor="@color/info_text"
            android:textSize="8sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_price"
            android:textColor="@color/info_text"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/tv_close_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/price"
            android:layout_marginLeft="10dp"
            android:textColor="@color/info_text"
            android:textSize="8sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vg_change_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_rate"
            android:textColor="@color/info_text"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/tv_change_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/price"
            android:layout_marginLeft="10dp"
            android:textColor="@color/info_text"
            android:textSize="8sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            android:textColor="@color/info_text"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/tv_vol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/price"
            android:layout_marginLeft="10dp"
            android:textColor="@color/info_text"
            android:textSize="8sp" />
    </LinearLayout>
</LinearLayout>